<resources>
    <string name="personTitle">设置</string>
    <string name="app_name">狗头人的商店</string>
    <string name="login_right">帮助</string>
    <string name="loginAccount">请在此输入帐号/手机号</string>
    <string name="loginPassword">请输入密码</string>
    <string name="loginLogin">登录</string>
    <string name="loginSetpw">忘记密码</string>
    <string name="loginRegi">注册</string>
    <string name="regiTitle">快速注册</string>
    <string name="regiCountry">国家地区</string>
    <string name="regiNumber">+86</string>
    <string name="regiPhone">请输入手机号码</string>
    <string name="regiCode">请输入验证码</string>
    <string name="regiNext">同意协议并注册</string>
    <string name="regiFCode">获取验证码</string>
    <string name="suiTitle">设置账户信息</string>
    <string name="suiPW">在此设置密码</string>
    <string name="suiPWHint">密码由6到20位英文字母、数字或符号组成</string>
    <string name="suiAccount">在此设置会员名</string>
    <string name="suiAHint">5到25个字符，推荐使用中文，请勿包含姓名/身份证/银行卡等隐私信息，可用于登录或找回密码</string>
    <string name="suiNext">确定</string>
    <string name="main_main">首页</string>
    <string name="main_shopcart">购物车</string>
    <string name="main_person">个人</string>
    <string name="splashClick">3s跳过</string>
    <string name="setDiqu">地区设置</string>
    <string name="setYingxiao">音效与通知</string>
    <string name="setYingsi">隐私</string>
    <string name="setTongyong">通用</string>
    <string name="setFangkui">问题反馈</string>
    <string name="setExit">退出当前账户</string>
    <string name="itemTest">魅族Pro7Meizu/魅族 PRO 7 Plus 128G高配版全网通4G手机</string>
    <string name="itemPrice">￥988</string>
    <string name="itemNumber">335人付款</string>
    <string name="perTitle">个人</string>
    <string name="perUid">UID</string>
    <string name="perDingdan">我的订单</string>
    <string name="perCollect">我的收藏</string>
    <string name="perDizhi">地址管理</string>
    <string name="perHistory">浏览历史</string>
    <string name="perStore">我的店铺</string>
    <string name="perMore">更多服务</string>
    <string name="perUpdate">修改密码</string>
    <string name="updateTitle">修改密码</string>
    <string name="updateOld">在此输入旧密码</string>
    <string name="updateNew">在此输入新密码</string>
    <string name="uiTitle">个人资料</string>
    <string name="uiUid">会员ID</string>
    <string name="uiAccount">会员名</string>
    <string name="uiSex">性别</string>
    <string name="uiRegister">注册日期</string>
    <string name="uiBirth">出生日期</string>
    <string name="uiSum">消费总额</string>
    <string name="uiSextitle">选择性别</string>
    <string name="mainSearch">在此输入要查询的商品名/商店名</string>
    <string name="aaTitle">新建收货地址</string>
    <string name="aaSave">保存</string>
    <string name="aaMan">收货人：</string>
    <string name="aaPhone">手机号：</string>
    <string name="aaAddress">所在地区：</string>
    <string name="aaXiangxi">详细地址：</string>
    <string name="aclEnd">--End--</string>
    <string name="addTitle">收货地址管理</string>
    <string name="addBtn">新建地址</string>
</resources>
