<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="205dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/transparent"
    android:padding="@dimen/dp8">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp160"
            android:scaleType="fitXY"
            android:src="@mipmap/appimage" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:maxLines="2"
            android:padding="@dimen/dp4"
            android:text="@string/itemTest"
            android:textColor="#000"
            android:textSize="12sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp4">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemPrice"
                android:textColor="@color/menuCenter" />

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/price"
                android:layout_marginLeft="@dimen/dp4"
                android:layout_marginStart="@dimen/dp4"
                android:layout_toEndOf="@id/price"
                android:layout_toRightOf="@id/price"
                android:text="@string/itemNumber"
                android:textSize="@dimen/sp12" />

            <ImageView
                android:id="@+id/addshopcar"
                android:layout_width="@dimen/dp16"
                android:layout_height="@dimen/dp16"
                android:layout_alignBottom="@id/price"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@mipmap/addshopcar" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>